--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,16 @@
         }
     ],
     "require": {
-        "illuminate/contracts": "5.1.*|5.2.*|5.3.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*"
+        "hampe/inky": "^1.3.6",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*",
+        "illuminate/view": "5.1.*|5.2.*|5.3.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~5.4",
     },
     "autoload": {
         "psr-4": {
-            "Petecoop\\LaravelInky\\": "src/"
+            "Petecoop\\LaravelInky\\": "src"
         }
     }
 }
