--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "hampe/inky": "^1.3.6",
         "illuminate/support": "5.1.*|5.2.*|5.3.*",
-        "illuminate/view": "5.1.*|5.2.*|5.3.*"
+        "illuminate/view": "5.1.*|5.2.*|5.3.*",
+        "pelago/emogrifier": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.4",
