--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "hampe/inky": "^1.3.6",
         "illuminate/support": "5.1.*|5.2.*|5.3.*",
         "illuminate/view": "5.1.*|5.2.*|5.3.*",
-        "pelago/emogrifier": "^1.0.0"
+        "pelago/emogrifier": "^1.0.0",
+        "symfony/css-selector": "^2.7|^3.0",
+        "symfony/dom-crawler": "^2.7|^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.4",
+        "phpunit/phpunit": "~5.4"
     },
     "autoload": {
         "psr-4": {
