--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.2",
-        "phpunit/phpunit": "~5.4"
+        "phpunit/phpunit": "~5.4",
+        "mockery/mockery": "^0.9.5"
     },
     "autoload": {
         "psr-4": {
