--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "hampe/inky": "^1.3.6.2",
         "illuminate/support": "5.1.*|5.2.*|5.3.*",
         "illuminate/view": "5.1.*|5.2.*|5.3.*",
-        "pelago/emogrifier": "^1.0.0",
+        "tijsverkoyen/css-to-inline-styles": "^2.2",
         "symfony/css-selector": "^2.7|^3.0",
         "symfony/dom-crawler": "^2.7|^3.0"
     },
