--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "hampe/inky": "^1.3.6.2",
         "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*",
         "illuminate/view": "5.1.*|5.2.*|5.3.*|5.4.*",
-        "pelago/emogrifier": "^1.0.0",
         "symfony/css-selector": "^2.7|^3.0",
-        "symfony/dom-crawler": "^2.7|^3.0"
+        "symfony/dom-crawler": "^2.7|^3.0",
+        "tijsverkoyen/css-to-inline-styles": "^2.2"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.3",
