--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "hampe/inky": "^1.3.6.2",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/view": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
+        "illuminate/support": "~5.1",
+        "illuminate/view": "~5.1",
         "symfony/css-selector": "^2.7|^3.0",
         "symfony/dom-crawler": "^2.7|^3.0",
         "tijsverkoyen/css-to-inline-styles": "^2.2"
