--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "hampe/inky": "^1.3.6.2",
         "illuminate/support": "~5.1",
         "illuminate/view": "~5.1",
-        "symfony/css-selector": "^2.7|^3.0",
-        "symfony/dom-crawler": "^2.7|^3.0",
+        "symfony/css-selector": "^2.7|^3.0|^4.0",
+        "symfony/dom-crawler": "^2.7|^3.0|^4.0",
         "tijsverkoyen/css-to-inline-styles": "^2.2"
     },
     "require-dev": {
