--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "petecoop/laravel-inky",
+    "name": "fibis/laravel-inky",
     "description": "Foundation Inky email templates in Laravel",
     "keywords": ["foundation", "inky", "laravel"],
     "license": "MIT",
@@ -10,12 +10,13 @@
         }
     ],
     "require": {
-        "hampe/inky": "^1.3.6.2",
+        "filipegar/inky": "^1.3.7",
         "illuminate/support": "~5.1",
         "illuminate/view": "~5.1",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "symfony/dom-crawler": "^2.7|^3.0|^4.0",
-        "tijsverkoyen/css-to-inline-styles": "^2.2"
+        "tijsverkoyen/css-to-inline-styles": "^2.2",
+        "pelago/emogrifier": "^2.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.3",
@@ -24,18 +25,18 @@
     },
     "autoload": {
         "psr-4": {
-            "Petecoop\\LaravelInky\\": "src"
+            "fibis\\LaravelInky\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Petecoop\\Tests\\LaravelInky\\": "tests"
+            "fibis\\Tests\\LaravelInky\\": "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Petecoop\\LaravelInky\\InkyServiceProvider"
+                "fibis\\LaravelInky\\InkyServiceProvider"
             ]
         }
     }
