--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "filipegar/inky": "^1.3.6.2",
-        "illuminate/support": "~5.1",
-        "illuminate/view": "~5.1",
+        "filipegar/inky": "^1.3.7",
+        "illuminate/support": "~5.1|~6.0",
+        "illuminate/view": "~5.1|~6.0",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "symfony/dom-crawler": "^2.7|^3.0|^4.0",
         "tijsverkoyen/css-to-inline-styles": "^2.2"
