--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "petecoop",
-            "email": "pete@petecoop.co.uk"
+            "name": "Adriaan Wind",
+            "email": "adriaan@windfactory.net"
         }
     ],
     "require": {
