--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "filipegar/inky": "^1.3.7",
-        "illuminate/support": "~6.1",
-        "illuminate/view": "~6.1",
+        "illuminate/support": "^6.0",
+        "illuminate/view": "^6.0",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "symfony/dom-crawler": "^2.7|^3.0|^4.0",
         "pelago/emogrifier": "^2.0"
