--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "graham-campbell/testbench": "^5.3",
-        "phpunit/phpunit": "~5.4",
+        "phpunit/phpunit": "^7.0",
         "mockery/mockery": "^0.9.5"
     },
     "autoload": {
