--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,16 @@
         }
     ],
     "require": {
-        "hampe/inky": "^1.3.6.2",
-        "illuminate/support": "~5.1",
-        "illuminate/view": "~5.1",
+        "illuminate/support": "^6.0",
+        "illuminate/view": "^6.0",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "symfony/dom-crawler": "^2.7|^3.0|^4.0",
-        "tijsverkoyen/css-to-inline-styles": "^2.2"
+        "tijsverkoyen/css-to-inline-styles": "^2.2",
+        "incentfit/inky": "1.3.6.5"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.3",
-        "phpunit/phpunit": "~5.4",
-        "mockery/mockery": "^0.9.5"
+        "phpunit/phpunit": "^8.0",
+        "graham-campbell/testbench": "^5.3"
     },
     "autoload": {
         "psr-4": {
