--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
+        "incentfit/inky": "1.3.6.5",
         "illuminate/support": "^6.0",
         "illuminate/view": "^6.0",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "symfony/dom-crawler": "^2.7|^3.0|^4.0",
-        "tijsverkoyen/css-to-inline-styles": "^2.2",
-        "incentfit/inky": "1.3.6.5"
+        "tijsverkoyen/css-to-inline-styles": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
