--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "petecoop/laravel-inky",
+    "name": "rsvpify/laravel-inky",
     "description": "Foundation Inky email templates in Laravel",
     "keywords": ["foundation", "inky", "laravel"],
     "license": "MIT",
     "authors": [
         {
-            "name": "petecoop",
-            "email": "pete@petecoop.co.uk"
+            "name": "Rsvpify",
+            "email": "support@rsvpify.com"
         }
     ],
     "require": {
@@ -23,18 +23,18 @@
     },
     "autoload": {
         "psr-4": {
-            "Petecoop\\LaravelInky\\": "src"
+            "Rsvpify\\LaravelInky\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Petecoop\\Tests\\LaravelInky\\": "tests"
+            "Rsvpify\\Tests\\LaravelInky\\": "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Petecoop\\LaravelInky\\InkyServiceProvider"
+                "Rsvpify\\LaravelInky\\InkyServiceProvider"
             ]
         }
     }
