--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,16 @@
         }
     ],
     "require": {
-        "filipegar/inky": "^1.3.7",
-        "illuminate/support": "^6.0",
-        "illuminate/view": "^6.0",
-        "symfony/css-selector": "^2.7|^3.0|^4.0",
-        "symfony/dom-crawler": "^2.7|^3.0|^4.0",
-        "pelago/emogrifier": "^3.0"
+      "incentfit/inky": "1.3.6.5",
+      "illuminate/support": "^6.0",
+      "illuminate/view": "^6.0",
+      "symfony/css-selector": "^2.7|^3.0|^4.0",
+      "symfony/dom-crawler": "^2.7|^3.0|^4.0",
+      "tijsverkoyen/css-to-inline-styles": "^2.2"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^5.3",
-        "phpunit/phpunit": "^8.3",
-        "mockery/mockery": "^1.2.3"
+      "phpunit/phpunit": "^8.0",
+      "graham-campbell/testbench": "^5.3"
     },
     "autoload": {
         "psr-4": {
