--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Rsvpify",
-            "email": "support@rsvpify.com"
+            "name": "Bryan Miller",
+            "email": "bryan@kirschbaumdevelopment.com"
         }
     ],
     "require": {
         "incentfit/inky": "1.3.6.5",
-        "illuminate/support": "^6.0",
-        "illuminate/view": "^6.0",
+        "illuminate/support": "^5.7|^6.0",
+        "illuminate/view": "^5.7|^6.0",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "symfony/dom-crawler": "^2.7|^3.0|^4.0",
         "tijsverkoyen/css-to-inline-styles": "^2.2"
