--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "rsvpify/laravel-inky",
     "description": "Foundation Inky email templates in Laravel",
-    "version": "0.7.0",
+    "version": "0.8.0",
     "keywords": ["foundation", "inky", "laravel"],
     "license": "MIT",
     "authors": [
@@ -12,13 +12,13 @@
     ],
     "require": {
         "incentfit/inky": "1.3.6.5",
-        "illuminate/support": "^5.7|^6.0|^7.0",
-        "illuminate/view": "^5.7|^6.0|^7.0",
-        "symfony/dom-crawler": "^2.7|^3.0|^4.0",
+        "illuminate/support": "^5.7|^6.0|^7.0|^8.0",
+        "illuminate/view": "^5.7|^6.0|^7.0|^8.0",
+        "symfony/dom-crawler": "^2.7|^3.0|^4.0|^5.0",
         "tijsverkoyen/css-to-inline-styles": "^2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^8.0|^9.0",
         "graham-campbell/testbench": "^5.3"
     },
     "autoload": {
