--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,18 @@
         }
     ],
     "require": {
-        "filipegar/inky": "^1.3.7",
+        "frogbob/inky-php": "^0.0.2",
         "illuminate/support": "^6.0|^7.0|^8.0",
         "illuminate/view": "^6.0|^7.0|^8.0",
-        "symfony/css-selector": "^2.7|^3.0|^4.0|^5.0",
-        "symfony/dom-crawler": "^2.7|^3.0|^4.0|^5.0",
-        "pelago/emogrifier": "^4.0"
+        "symfony/css-selector": "^4.0|^5.0",
+        "symfony/dom-crawler": "^4.0|^5.0",
+        "pelago/emogrifier": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "mockery/mockery": "^1.3.3"
+        "mockery/mockery": "^1.3.3",
+        "psr/log": "^1.0",
+        "graham-campbell/testbench": "^5.6"
     },
     "autoload": {
         "psr-4": {
